--- a/templates/base.html
+++ b/templates/base.html
@@ -77,10 +77,10 @@
 
 <!-- Bootstrap core JavaScript
 ================================================== -->
-
+<script src="//cdnjs.cloudflare.com/ajax/libs/json2/20110223/json2.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-
+<script src="https://raw.github.com/andris9/jStorage/master/jstorage.js"></script>
 
 {%  block js %}
 {%  endblock %}
