switching to datetimepicker

--- a/templates/web/booking_form.html
+++ b/templates/web/booking_form.html
@@ -12,38 +12,7 @@
             <div class="span6 pagination-centered">
                 <h1>Booking</h1>
                 <form id="booking" role="form" class="form-horizontal">{% csrf_token %}
-                    {{ form.non_field_errors }}
-                    {{ form.requested_from.as_hidden }}
-                    {{ form.requested_to.as_hidden }}
-                    {{ form.duration.as_hidden }}
-
-                    <div class="form-group">
-                        {{ form.client.errors }}
-                        {{ form.client.label_tag }}
-                        {{ form.client }}
-                    </div>
-
-                    <div class="form-group">
-                        {{ form.requested_from.errors }}
-                        {{ form.requested_from.label_tag }}
-                        <div id="from_date" name="from_date" class="bfh-datepicker" data-format="d-m-y" data-min="today">></div>
-                        <div id="from_time" name="from_time" class="bfh-timepicker" data-time="now"></div>
-                    </div>
-
-                    <div class="form-group">
-                        {{ form.requested_to.errors }}
-                        {{ form.requested_to.label_tag }}
-                        <div id="to_date" name="to_date" class="bfh-datepicker" data-format="d-m-y" data-min="today">></div>
-                        <div id="to_time" name="to_time" class="bfh-timepicker" data-time="now">></div>
-                    </div>
-
-                    {#    fields = [ 'client', 'requested_from', 'requested_to', 'duration', 'location', 'instrument', 'deadline', 'client_ref', 'comments']#}
-
-                    <div class="form-group">
-                        {{ form.location.errors }}
-                        {{ form.location.label_tag }}
-                        {{ form.location }}
-                    </div>
+                 {{ form }}
 
 
 
@@ -64,12 +33,20 @@
     <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.tablesorter.widgets.js"></script>
 
 
-    <script type="text/javascript" src="{{ STATIC_URL }}js/bootstrap-datetimepicker.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}js/bootstrap-datetimepicker.min.js"></script>
 
     <script type="text/javascript">
         API = "http://127.0.0.1:8000/api/v1/";
 
         $(document).ready(function () {
+
+            $('#id_requested_from').datepicker({
+    format: 'yyyy-mm-dd hh:ii'
+});
+
+            $('#id_requested_to').datepicker({
+    format: 'mm-dd-yyyy'
+});
 
            $('#from_date').on('change.bfhdatepicker', function(e) {
                //change hidden value
