--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,6 @@
+{% load bootstrap3 %}
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,7 +14,10 @@
     <title>{% block title %}Tunings App {% endblock %}</title>
 
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+    {# Load CSS and JavaScript #}
+
+    {% bootstrap_css %}
+
     <link href="//netdna.bootstrapcdn.com/bootswatch/3.1.1/lumen/bootstrap.min.css" rel="stylesheet">
     <link href="{{ STATIC_URL }}css/responsive-calendar.css" rel="stylesheet">
 
@@ -40,23 +46,30 @@
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="\">Home</a></li>
-                        <li><a href="#about">About</a></li>
 
                         {% if user.is_authenticated %}
 
                             {% if user.is_staff %}
-                                <li><a href="/admin">Admin</a></li>
+                                <li class="dropdown">
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Admin<b class="caret"></b></a>
+                                    <ul class="dropdown-menu">
+                                        <li><a href="/admin">Admin</a></li>
+                                        <li><a href="/apis">APIs</a></li>
+                                    </ul>
+                                </li>
                             {% endif %}
 
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ user.first_name }} {{ user.last_name }} <b class="caret"></b></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="#">Action</a></li>
-                                    <li><a href="#">Another action</a></li>
-                                    <li><a href="#">Something else here</a></li>
+                                    <li><a href="/booking/add/">Make Booking</a></li>
+                                    <li><a href="#">Assign Tuner</a></li>
+                                    <li><a href="#">Expiring Requests</a></li>
                                     <li class="divider"></li>
-                                    <li class="dropdown-header">Nav header</li>
-                                    <li><a href="#">Separated link</a></li>
+
+                                    <li><a href="#">Client Payments Due</a></li>
+                                    <li><a href="#">Tuner Payments Due</a></li>
+                                                   <li class="divider"></li>
                                     <li><a href="/logout/">Logout</a></li>
                                 </ul>
                             </li>
@@ -72,10 +85,20 @@
 </div>
 
 
+
+{# Display django.contrib.messages as Bootstrap alerts #}
+{% bootstrap_messages %}
 {% block body %}
     {%  block main %}
+          <div class="container">
+        <div class="row">
+
+
         {% block content %}
         {% endblock content %}
+
+        </div>
+        </div>
     {% endblock main %}
 {% endblock body %}
 
@@ -83,8 +106,8 @@
 ================================================== -->
 <script src="//cdnjs.cloudflare.com/ajax/libs/json2/20110223/json2.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-<script src="https://raw.github.com/andris9/jStorage/master/jstorage.js"></script>
+{% bootstrap_javascript %}
+{#<script src="https://raw.github.com/andris9/jStorage/master/jstorage.js"></script>#}
 <script src="{{ STATIC_URL }}js/moment.min.js"></script>
 
 {%  block js %}
