--- a/templates/web/booking_form.html
+++ b/templates/web/booking_form.html
@@ -1,79 +1,288 @@
 {% extends "base.html" %}
-
+{% load bootstrap3 %}
 {% block extra_head %}
     <link href="{{ STATIC_URL }}css/bootstrap-datetimepicker.min.css" rel="stylesheet">
 
+    <style>
+    .requested {
+
+    }
+    </style>
 {% endblock extra_head %}
-{% block content %}
+{% block main %}
 
 
     <div class="container">
         <div class="row">
-            <div class="span6 pagination-centered">
+            <div class="col-md-6">
+
                 <h1>Booking</h1>
-                <form id="booking" role="form" class="form-horizontal">{% csrf_token %}
-                 {{ form }}
+                <form id="booking" role="form" class="form-horizontal" action="" method="post">{% csrf_token %}
+                    {% bootstrap_form form %}
+                    {% buttons %}
+                        <button type="submit" class="btn btn-primary">
+                            {% bootstrap_icon "star" %} Save
+                        </button>
+                    {% endbuttons %}
 
-
-
-
-                    <button type="submit" id="make_booking"
-                            class="btn btn-large btn-primary" type="button">Save</button>
 
                 </form>
+            </div>
+            <div class="col-md-6">
+                <div class="table-responsive">
+                <table id="recent_bookings" class="table table-striped table-condensed">
+                    <thead>
+                    <tr>
+                        <th>Status</th>
+                        <th >When</th>
+                        <th>Who</th>
+                        <th>Where</th>
+                        <th>What</th>
+
+
+                    </tr>
+                    </thead>
+                    <tbody>
+
+                    </tbody>
+                </table>
+                    </div>
             </div>
         </div>
     </div>
 
-{% endblock content %}
+{% endblock main %}
 
 {% block js %}
 
     <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.tablesorter.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.tablesorter.widgets.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}js/bootstrap-datetimepicker.js"></script>
 
 
-    <script type="text/javascript" src="{{ STATIC_URL }}js/bootstrap-datetimepicker.min.js"></script>
 
     <script type="text/javascript">
-        API = "http://127.0.0.1:8000/api/v1/";
+    API = "http://127.0.0.1:8000/api/v1/";
 
-        $(document).ready(function () {
+    $(document).ready(function () {
 
-            $('#id_requested_from').datepicker({
-    format: 'yyyy-mm-dd hh:ii'
-});
 
-            $('#id_requested_to').datepicker({
-    format: 'mm-dd-yyyy'
-});
+        init();
 
-           $('#from_date').on('change.bfhdatepicker', function(e) {
-               //change hidden value
-               var newdate = moment(this.value + $("#id_requested_from").val().substr(10), "DD-MM-YYYY HH:mm:SS");
-               $("#id_requested_from").val(newdate.format('YYYY MM DD'));
 
-               // if to date after new from date, change the date part of the to date to new from date
-               // (read the code, it makes more sense!)
-               var to_date = moment($("#id_requested_to").val(), "DD-MM-YYYY HH:mm:SS");
+        // when client is selected, show rest of form
+        $("#id_client").on("change", function() {
+            update_dropdowns(this.value);
+            $('.form-group').show();
+        })
 
-               if (to_date.isBefore(newdate)) {
-                   $("#id_requested_from").val(newdate.format('YYYY MM DD'));
-               }
-            });
 
-           $('#to_date').on('change.bfhdatepicker', function(e) {
-               //change hidden value
-               var newdate = moment(this.value + $("#id_requested_to").val().substr(10), "DD-MM-YYYY HH:mm:SS");
-               $("#id_requested_to").val(newdate.format('YYYY MM DD'));
-               $("#to_date").val(newdate.format('DD-MM-YYYY'))
 
-            });
 
+        $("#id_deadline").on("dp.change",function (e) {
+            // when the deadline is set, the requested time can't be after the deadline
+            var max_from = moment(e.date).subtract('minutes', duration);
+            var max_to = moment(e.date);
+            $('#id_requested_from').data("DateTimePicker").setMaxDate(max_from);
+            $('#id_requested_from').data("DateTimePicker").setDate(max_from);
+            $('#id_requested_to').data("DateTimePicker").setMaxDate(max_to);
+            $('#id_requested_to').data("DateTimePicker").setDate(max_to);
+        });
+
+        $("#id_requested_from").on("dp.change",function (e) {
+            var min_to = e.date.add('minutes', duration);
+            $('#id_requested_to').data("DateTimePicker").setMinDate(min_to);
+            $('#id_requested_to').data("DateTimePicker").setDate(min_to);
+        });
+        {#            $("#id_requested_to").on("dp.change",function (e) {#}
+        {#               //$('#datetimepicker8').data("DateTimePicker").setMaxDate(e.date);#}
+        {#            });#}
+
+        $("#id_deadline").on("dp.change",function (e) {
+            $('#id_requested_to').data("DateTimePicker").setMaxDate(e.date);
+        });
+
+
+        $('#from_date').on('change.bfhdatepicker', function(e) {
+            //change hidden value
+            var newdate = moment(this.value + $("#id_requested_from").val().substr(10), "DD-MM-YYYY HH:mm:SS");
+            $("#id_requested_from").val(newdate.format('YYYY MM DD'));
+
+            // if to date after new from date, change the date part of the to date to new from date
+            // (read the code, it makes more sense!)
+            var to_date = moment($("#id_requested_to").val(), "DD-MM-YYYY HH:mm:SS");
+
+            if (to_date.isBefore(newdate)) {
+                $("#id_requested_from").val(newdate.format('YYYY MM DD'));
+            }
+        });
+
+        $('#to_date').on('change.bfhdatepicker', function(e) {
+            //change hidden value
+            var newdate = moment(this.value + $("#id_requested_to").val().substr(10), "DD-MM-YYYY HH:mm:SS");
+            $("#id_requested_to").val(newdate.format('YYYY MM DD'));
+            $("#to_date").val(newdate.format('DD-MM-YYYY'))
 
         });
 
 
+    });
+
+    function init() {
+        // when page is first loaded
+
+        // hide everything except client
+        $('.form-group').hide();
+        $('.form-group:first').show();
+
+        recent_bookings();
+
+
+        // HANDLE DATES
+
+        var mindate = moment();
+        var maxdate = moment().add('days', {{ MAX_BOOK_DAYS_IN_ADVANCE }});
+        var duration = parseInt($("#id_duration").val());
+
+        var dt_options = {
+            useSeconds: false,
+            format: 'YYYY-MM-DD HH:mm',
+            minuteStepping:5,
+            minDate:mindate,
+            maxDate: maxdate,
+            showToday: true,
+            language:'en',
+            sideBySide: true
+        };
+
+        $('#id_requested_from').datetimepicker(dt_options);
+
+        $('#id_requested_to').datetimepicker(dt_options);
+
+        $('#id_deadline').datetimepicker(dt_options);
+
+    }
+
+    // HANDLE CLIENT SPECIFIC DATA
+    function update_dropdowns(org_id) {
+
+        // locations for this client
+        $.ajax({
+            type:"get",
+            url:API+"locations",
+            data: {organisation_id: org_id},
+            dataType : 'json',
+            success:function(data){
+
+                var select= '<select>';
+                var options = '';
+                $.each(data.objects, function(index, value) {
+                    options += '<option value="' + value.id + '">' + value.name + '</option>';
+                });
+                select = select + options + '</select>';
+                $('#id_location').html(select);
+
+            }
+        });
+
+        // instruments for this client
+        $.ajax({
+            type:"get",
+            url:API+"instruments",
+            data: {organisation_id: org_id},
+            dataType : 'json',
+            success:function(data){
+
+                var select= '<select>';
+                var options = '';
+
+                $.each(data.objects, function(index, value) {
+                    options += '<option value="' + value.id + '">' + value.name + '</option>';
+                });
+                select = select + options + '</select>';
+                $('#id_instrument').html(select);
+
+            }
+        });
+
+    }
+
+    function recent_bookings() {
+
+
+
+        $.ajax({
+            type:"get",
+            url:API+"recent_bookings",
+            data: {
+                limit:10},
+            dataType : 'json',
+            success:function(json){
+                data = new Array();
+                $.each(json.objects, function(i,d) {
+                    d['togo'] = moment(d.when).fromNow()
+                    data.push(d)
+                })
+                build_table(data,
+                        ["status", "togo", "who", "where", "what"],
+                "#recent_bookings")
+
+            }
+        });
+    }
+
+
+    function build_table(json, cols, tableid) {
+
+
+
+
+        // build table
+        var body = $(tableid+" tbody");
+        var rows = "";
+        $.each(json, function (i, d) {
+
+            var tr = '<tr class="' + d.status + '" data-id="'+d.id+'">';
+
+            $.each(cols, function(i,c){
+
+                tr += '<td class="name" >' + d[c] + '</td>';
+            });
+        rows += tr + '</tr>';
+        });
+
+        body.append(rows);
+
+    }
+
+    {##}
+    {##}
+    {##}
+    {#        // add the onclick for org now that everything is initialised#}
+    {#        $(".org_row").on("click", function(e) {#}
+    {#            e.preventDefault();#}
+    {##}
+    {#            var thisrow = $(this);#}
+    {#            var org_id = thisrow.data("org");#}
+    {##}
+    {#            // toggle selection of organisation on clicking on row#}
+    {#            if (thisrow.hasClass("orgrowselected")) {#}
+    {#                deleteOrg(org_id);#}
+    {#            } else {#}
+    {#                addingOrg(org_id);#}
+    {#            }#}
+    {##}
+    {##}
+    {##}
+    {#        });#}
+    {##}
+    {##}
+    {##}
+    {##}
+    {#        $("#cleanfilters").on("click", function() {#}
+    {#            $('.choosers').trigger('filterReset');#}
+    {#        });#}
+    {#        }#}
 
 
     </script>
