--- a/templates/web/booking_form.html
+++ b/templates/web/booking_form.html
@@ -2,11 +2,13 @@
 {% load bootstrap3 %}
 {% block extra_head %}
     <link href="{{ STATIC_URL }}css/bootstrap-datetimepicker.min.css" rel="stylesheet">
+    <link href="//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/css/bootstrap-editable.css" rel="stylesheet"/>
+
 
     <style>
-    .requested {
+        .requested {
 
-    }
+        }
     </style>
 {% endblock extra_head %}
 {% block main %}
@@ -16,7 +18,7 @@
         <div class="row">
             <div class="col-md-6">
 
-                <h1>Booking</h1>
+                <h1>New Booking</h1>
                 <form id="booking" role="form" class="form-horizontal" action="" method="post">{% csrf_token %}
                     {% bootstrap_form form %}
                     {% buttons %}
@@ -30,23 +32,50 @@
             </div>
             <div class="col-md-6">
                 <div class="table-responsive">
-                <table id="recent_bookings" class="table table-striped table-condensed">
-                    <thead>
-                    <tr>
-                        <th>Status</th>
-                        <th >When</th>
-                        <th>Who</th>
-                        <th>Where</th>
-                        <th>What</th>
+                    <table id="recent_bookings" class="table table-striped table-condensed">
+                        <thead>
+                        <tr>
+                            <th>Status</th>
+                            <th >When</th>
+                            <th>Who</th>
+                            <th>Where</th>
+                            <th>What</th>
 
 
-                    </tr>
-                    </thead>
-                    <tbody>
+                        </tr>
+                        </thead>
+                        <tbody>
 
-                    </tbody>
-                </table>
-                    </div>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+
+                <h1>Unasigned Bookings</h1>
+                <div class="table-responsive">
+                    <table id="requested_bookings" class="table table-striped table-condensed">
+                        <thead>
+                        <tr>
+                            <th>When</th>
+                            <th >To Go</th>
+                            <th>Where</th>
+                            <th>What</th>
+                            <th>Who</th>
+
+
+                        </tr>
+                        </thead>
+                        <tbody>
+
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
@@ -59,7 +88,7 @@
     <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.tablesorter.widgets.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/bootstrap-datetimepicker.js"></script>
 
-
+    <script src="//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/js/bootstrap-editable.min.js"></script>
 
     <script type="text/javascript">
     API = "http://127.0.0.1:8000/api/v1/";
@@ -69,6 +98,7 @@
 
         init();
 
+        // ON CHANGES
 
         // when client is selected, show rest of form
         $("#id_client").on("change", function() {
@@ -78,9 +108,9 @@
 
 
 
-
         $("#id_deadline").on("dp.change",function (e) {
             // when the deadline is set, the requested time can't be after the deadline
+            var duration = parseInt($("#id_duration").val());
             var max_from = moment(e.date).subtract('minutes', duration);
             var max_to = moment(e.date);
             $('#id_requested_from').data("DateTimePicker").setMaxDate(max_from);
@@ -90,41 +120,27 @@
         });
 
         $("#id_requested_from").on("dp.change",function (e) {
+            var duration = parseInt($("#id_duration").val());
             var min_to = e.date.add('minutes', duration);
             $('#id_requested_to').data("DateTimePicker").setMinDate(min_to);
             $('#id_requested_to').data("DateTimePicker").setDate(min_to);
         });
-        {#            $("#id_requested_to").on("dp.change",function (e) {#}
-        {#               //$('#datetimepicker8').data("DateTimePicker").setMaxDate(e.date);#}
-        {#            });#}
+
 
         $("#id_deadline").on("dp.change",function (e) {
             $('#id_requested_to').data("DateTimePicker").setMaxDate(e.date);
         });
 
 
-        $('#from_date').on('change.bfhdatepicker', function(e) {
-            //change hidden value
-            var newdate = moment(this.value + $("#id_requested_from").val().substr(10), "DD-MM-YYYY HH:mm:SS");
-            $("#id_requested_from").val(newdate.format('YYYY MM DD'));
 
-            // if to date after new from date, change the date part of the to date to new from date
-            // (read the code, it makes more sense!)
-            var to_date = moment($("#id_requested_to").val(), "DD-MM-YYYY HH:mm:SS");
+        $('#id_duration').on('change', function(e) {
+            // increase from time
+            var totime = moment($("#id_requested_to").val(), "DD-MM-YYYY HH:mm:SS");
+            var fromtime = totime.subtract('minutes', parseInt(this.value))
+            $("#id_requested_from").data("DateTimePicker").setDate(fromtime);
 
-            if (to_date.isBefore(newdate)) {
-                $("#id_requested_from").val(newdate.format('YYYY MM DD'));
-            }
-        });
-
-        $('#to_date').on('change.bfhdatepicker', function(e) {
-            //change hidden value
-            var newdate = moment(this.value + $("#id_requested_to").val().substr(10), "DD-MM-YYYY HH:mm:SS");
-            $("#id_requested_to").val(newdate.format('YYYY MM DD'));
-            $("#to_date").val(newdate.format('DD-MM-YYYY'))
 
         });
-
 
     });
 
@@ -136,13 +152,13 @@
         $('.form-group:first').show();
 
         recent_bookings();
+        requested_bookings();
 
 
         // HANDLE DATES
 
         var mindate = moment();
         var maxdate = moment().add('days', {{ MAX_BOOK_DAYS_IN_ADVANCE }});
-        var duration = parseInt($("#id_duration").val());
 
         var dt_options = {
             useSeconds: false,
@@ -161,6 +177,8 @@
 
         $('#id_deadline').datetimepicker(dt_options);
 
+        //TODO: If one location then use that
+        //TODO: allow for entry of new locations and instruments
     }
 
     // HANDLE CLIENT SPECIFIC DATA
@@ -225,12 +243,44 @@
                 })
                 build_table(data,
                         ["status", "togo", "who", "where", "what"],
-                "#recent_bookings")
+                        "#recent_bookings")
 
             }
         });
     }
 
+    function requested_bookings() {
+
+
+
+        $.ajax({
+            type:"get",
+            url:API+"requested_bookings",
+            data: {
+                limit:10},
+            dataType : 'json',
+            success:function(json){
+                data = new Array();
+                $.each(json.objects, function(i,d) {
+                    d['togo'] = moment(d.when).fromNow()
+                    d['when'] = moment(d.when).format('ddd Do MMM - HH:mm')
+                    d['who'] = '<a href="#" class="tuners" id="tunerfor_' + d['ref'] + '" data-type="text" data-placement="right" data-title="Enter Tuner">?</a>';
+                    data.push(d)
+                })
+                build_table(data,
+                        ["when", "togo", "where", "what", "who"],
+                        "#requested_bookings");
+
+                $('.tuners').editable({
+                    type: 'text',
+                    pk: 1,
+                    url: '/post',
+                    title: 'Enter Tuner'
+                });
+
+            }
+        });
+    }
 
     function build_table(json, cols, tableid) {
 
@@ -248,7 +298,7 @@
 
                 tr += '<td class="name" >' + d[c] + '</td>';
             });
-        rows += tr + '</tr>';
+            rows += tr + '</tr>';
         });
 
         body.append(rows);
