API js path in settings

--- a/templates/web/booking_form.html
+++ b/templates/web/booking_form.html
@@ -91,7 +91,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/js/bootstrap-editable.min.js"></script>
 
     <script type="text/javascript">
-    API = "http://127.0.0.1:8000/api/v1/";
+    API = "{{ API_URL }}"
 
     $(document).ready(function () {
 
