--- a/templates/web/booking_form.html
+++ b/templates/web/booking_form.html
@@ -31,6 +31,7 @@
                 </form>
             </div>
             <div class="col-md-6">
+                <h1>Recent Bookings</h1>
                 <div class="table-responsive">
                     <table id="recent_bookings" class="table table-striped table-condensed">
                         <thead>
@@ -57,7 +58,7 @@
         <div class="row">
             <div class="col-md-6">
 
-                <h1>Unasigned Bookings</h1>
+                <h1>Unassigned Bookings</h1>
                 <div class="table-responsive">
                     <table id="requested_bookings" class="table table-striped table-condensed">
                         <thead>
@@ -94,7 +95,6 @@
     API = "{{ API_URL }}"
 
     $(document).ready(function () {
-
 
         init();
 
@@ -135,7 +135,7 @@
 
         $('#id_duration').on('change', function(e) {
             // increase from time
-            var totime = moment($("#id_requested_to").val(), "DD-MM-YYYY HH:mm:SS");
+            var totime = $('#id_requested_to').data("DateTimePicker").getDate();
             var fromtime = totime.subtract('minutes', parseInt(this.value))
             $("#id_requested_from").data("DateTimePicker").setDate(fromtime);
 
@@ -152,7 +152,6 @@
         $('.form-group:first').show();
 
         recent_bookings();
-        requested_bookings();
 
 
         // HANDLE DATES
@@ -179,6 +178,21 @@
 
         //TODO: If one location then use that
         //TODO: allow for entry of new locations and instruments
+        
+        // get list of tuners
+        $.ajax({
+            type:"get",
+            url:API+"tuners",
+            dataType : 'json',
+            success:function(data){
+
+                var tuners = data.objects;
+                requested_bookings(tuners);
+
+            }
+        });
+
+
     }
 
     // HANDLE CLIENT SPECIFIC DATA
@@ -249,7 +263,7 @@
         });
     }
 
-    function requested_bookings() {
+    function requested_bookings(tuners) {
 
 
 
@@ -271,9 +285,14 @@
                         ["when", "togo", "where", "what", "who"],
                         "#requested_bookings");
 
+                var tuners_list = [];
+                $.each(tuners, function(i,d) {
+                    tuners_list.push({value: d.id, text: d.name});
+                });
+                
                 $('.tuners').editable({
-                    type: 'text',
-                    pk: 1,
+                    type: 'select',
+                    source: tuners_list,
                     url: '/post',
                     title: 'Enter Tuner'
                 });
