--- a/templates/web/booking_form.html
+++ b/templates/web/booking_form.html
@@ -31,6 +31,34 @@
                 </form>
             </div>
             <div class="col-md-6">
+
+                 <h1>Assign Tuner</h1>
+                <div class="table-responsive">
+                    <table id="requested_bookings" class="table table-striped table-condensed">
+                        <thead>
+                        <tr>
+                            <th>When</th>
+                            <th>Who</th>
+                            <th>Where</th>
+                            <th>What</th>
+                            <th >To Go</th>
+
+
+
+                        </tr>
+                        </thead>
+                        <tbody>
+
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
                 <h1>Recent Bookings</h1>
                 <div class="table-responsive">
                     <table id="recent_bookings" class="table table-striped table-condensed">
@@ -50,33 +78,8 @@
                         </tbody>
                     </table>
                 </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-
-                <h1>Unassigned Bookings</h1>
-                <div class="table-responsive">
-                    <table id="requested_bookings" class="table table-striped table-condensed">
-                        <thead>
-                        <tr>
-                            <th>When</th>
-                            <th >To Go</th>
-                            <th>Where</th>
-                            <th>What</th>
-                            <th>Who</th>
 
 
-                        </tr>
-                        </thead>
-                        <tbody>
-
-                        </tbody>
-                    </table>
-                </div>
             </div>
         </div>
     </div>
@@ -198,13 +201,14 @@
     // HANDLE CLIENT SPECIFIC DATA
     function update_dropdowns(org_id) {
 
-        // locations for this client
+        // studios for this client
         $.ajax({
             type:"get",
-            url:API+"locations",
-            data: {organisation_id: org_id},
+            url:API+"studios",
+            data: {client_id: org_id},
             dataType : 'json',
             success:function(data){
+
 
                 var select= '<select>';
                 var options = '';
@@ -212,16 +216,22 @@
                     options += '<option value="' + value.id + '">' + value.name + '</option>';
                 });
                 select = select + options + '</select>';
-                $('#id_location').html(select);
 
-            }
+
+                $('#id_studio').html(select);
+
+
+
+    }
+
+
         });
 
         // instruments for this client
         $.ajax({
             type:"get",
             url:API+"instruments",
-            data: {organisation_id: org_id},
+            data: {client_id: org_id},
             dataType : 'json',
             success:function(data){
 
@@ -278,11 +288,11 @@
                 $.each(json.objects, function(i,d) {
                     d['togo'] = moment(d.when).fromNow()
                     d['when'] = moment(d.when).format('ddd Do MMM - HH:mm')
-                    d['who'] = '<a href="#" class="tuners" id="tunerfor_' + d['ref'] + '" data-type="text" data-placement="right" data-title="Enter Tuner">?</a>';
+                    d['tuner'] = '<a href="#" class="tuners" data-pk="' + d['ref'] +'">?</a>';
                     data.push(d)
                 })
                 build_table(data,
-                        ["when", "togo", "where", "what", "who"],
+                        ["when", "tuner", "where", "what", "togo"],
                         "#requested_bookings");
 
                 var tuners_list = [];
@@ -293,7 +303,12 @@
                 $('.tuners').editable({
                     type: 'select',
                     source: tuners_list,
-                    url: '/post',
+                    sourceCache: true,
+                    url: API + 'accept_booking/?format=json',
+
+                    success: function(response, newValue) {
+        if(response.status == 'error') return response.msg; //msg will be shown in editable form
+    },
                     title: 'Enter Tuner'
                 });
 
@@ -311,7 +326,7 @@
         var rows = "";
         $.each(json, function (i, d) {
 
-            var tr = '<tr class="' + d.status + '" data-id="'+d.id+'">';
+            var tr = '<tr class="' + d.status + '" data-id="'+d.ref+'">';
 
             $.each(cols, function(i,c){
 
