--- a/templates/web/booking_form.html
+++ b/templates/web/booking_form.html
@@ -2,12 +2,13 @@
 {% load bootstrap3 %}
 {% block extra_head %}
     <link href="{{ STATIC_URL }}css/bootstrap-datetimepicker.min.css" rel="stylesheet">
+    <link href="{{ STATIC_URL }}js/fullcalendar/fullcalendar.css" rel="stylesheet">
     <link href="//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/css/bootstrap-editable.css" rel="stylesheet"/>
 
 
     <style>
-        .requested {
-
+        .fc-header-title h2 {
+            font-size: 90%;
         }
     </style>
 {% endblock extra_head %}
@@ -16,6 +17,12 @@
 
     <div class="container">
         <div class="row">
+            <div class="col-md-6">
+
+                    <div id="calendar"></div>
+
+
+            </div>
             <div class="col-md-6">
 
                 <h1>New Booking</h1>
@@ -29,10 +36,8 @@
 
 
                 </form>
-            </div>
-            <div class="col-md-6">
 
-                 <h1>Assign Tuner</h1>
+                <h1>Assign Tuner</h1>
                 <div class="table-responsive">
                     <table id="requested_bookings" class="table table-striped table-condensed">
                         <thead>
@@ -53,6 +58,8 @@
                     </table>
                 </div>
             </div>
+
+
         </div>
     </div>
 
@@ -81,8 +88,10 @@
 
 
             </div>
+
         </div>
     </div>
+
 
 {% endblock main %}
 
@@ -91,6 +100,7 @@
     <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.tablesorter.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.tablesorter.widgets.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/bootstrap-datetimepicker.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}js/fullcalendar/fullcalendar.js"></script>
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/js/bootstrap-editable.min.js"></script>
 
@@ -155,6 +165,7 @@
         $('.form-group:first').show();
 
         recent_bookings();
+        calendar();
 
 
         // HANDLE DATES
@@ -181,7 +192,7 @@
 
         //TODO: If one location then use that
         //TODO: allow for entry of new locations and instruments
-        
+
         // get list of tuners
         $.ajax({
             type:"get",
@@ -222,7 +233,7 @@
 
 
 
-    }
+            }
 
 
         });
@@ -299,7 +310,7 @@
                 $.each(tuners, function(i,d) {
                     tuners_list.push({value: d.id, text: d.name});
                 });
-                
+
                 $('.tuners').editable({
                     type: 'select',
                     source: tuners_list,
@@ -307,8 +318,8 @@
                     url: API + 'accept_booking/?format=json',
 
                     success: function(response, newValue) {
-        if(response.status == 'error') return response.msg; //msg will be shown in editable form
-    },
+                        if(response.status == 'error') return response.msg; //msg will be shown in editable form
+                    },
                     title: 'Enter Tuner'
                 });
 
@@ -339,35 +350,40 @@
 
     }
 
-    {##}
-    {##}
-    {##}
-    {#        // add the onclick for org now that everything is initialised#}
-    {#        $(".org_row").on("click", function(e) {#}
-    {#            e.preventDefault();#}
-    {##}
-    {#            var thisrow = $(this);#}
-    {#            var org_id = thisrow.data("org");#}
-    {##}
-    {#            // toggle selection of organisation on clicking on row#}
-    {#            if (thisrow.hasClass("orgrowselected")) {#}
-    {#                deleteOrg(org_id);#}
-    {#            } else {#}
-    {#                addingOrg(org_id);#}
-    {#            }#}
-    {##}
-    {##}
-    {##}
-    {#        });#}
-    {##}
-    {##}
-    {##}
-    {##}
-    {#        $("#cleanfilters").on("click", function() {#}
-    {#            $('.choosers').trigger('filterReset');#}
-    {#        });#}
-    {#        }#}
+    function calendar() {
+        //$.getJSON("http://127.0.0.1:8000/api/v1/bookings/?format=json",function(json) {
+        {#        var json = {"meta": {"limit": 20, "next": null, "offset": 0, "previous": null, "total_count": 5}, "objects": [{"allDay": "false", "className": "asked", "end": "2014-03-19T23:59:59.999999", "requested_from": "2014-03-19T00:00:00", "requested_to": "2014-03-19T23:59:59.999999", "resource_uri": "/api/v1/bookings/1/", "start": "2014-03-19T00:00:00", "status": "asked", "title": "None in None"}, {"allDay": "false", "className": "asked", "end": "2014-03-20T23:59:59.999999", "requested_from": "2014-03-20T00:00:00", "requested_to": "2014-03-20T23:59:59.999999", "resource_uri": "/api/v1/bookings/2/", "start": "2014-03-20T00:00:00", "status": "asked", "title": "None in None"}, {"allDay": "false", "className": "booked", "end": "2014-03-23T16:30:00", "requested_from": "2014-03-23T00:00:00", "requested_to": "2014-03-23T23:59:59.999999", "resource_uri": "/api/v1/bookings/3/", "start": "2014-03-23T16:00:00", "status": "booked", "title": "Steinway Grand in Studio Red"}, {"allDay": "false", "className": "booked", "end": "2014-03-26T08:00:00", "requested_from": "2014-03-26T00:00:00", "requested_to": "2014-03-26T23:59:59.999999", "resource_uri": "/api/v1/bookings/4/", "start": "2014-03-26T07:30:00", "status": "booked", "title": "Steinway Grand in Studio Red"}, {"allDay": "false", "className": "asked", "end": "2014-03-31T23:59:59.999999", "requested_from": "2014-03-31T00:00:00", "requested_to": "2014-03-31T23:59:59.999999", "resource_uri": "/api/v1/bookings/5/", "start": "2014-03-31T00:00:00", "status": "asked", "title": "Steinway Upright in Studio Red"}]}#}
+        {#        var data = json['objects'];#}
 
+        $.ajax({
+            type:"get",
+            url:API+"bookings",
+            data: {
+                limit:10},
+            dataType : 'json',
+            success:function(json){
+
+                // convert dates to moment objects
+                data = new Array();
+                $.each(json.objects, function(i,d) {
+                    d['start'] = moment(d.start);
+                    d['end'] = moment(d.end);
+
+                    data.push(d)
+                })
+
+                $('#calendar').fullCalendar({
+                    firstDay:1,
+header: {
+				left: 'prev,next ',
+				center: 'title',
+				right: 'month,agendaWeek,agendaDay'
+			},
+                    events: data
+                })
+            }
+        });
+    }
 
     </script>
 {% endblock js %}
